--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "dotenv": "^16.0.3",
+    "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.7",
     "next": "^12.1.6",
